-m proper heading provides

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="header-actions">
-        <h1>Employee Directory</h1>
+        <h1>Employee APP</h1>
         <input
           type="text"
           id="searchInput"
@@ -80,7 +80,7 @@
     </main>
 
     <footer class="app-footer">
-      &copy; 2025 Employee Directory App. All rights reserved.
+      &copy; July 2025 Employee App. All rights reserved.
     </footer>
 
     <script src="js/main.js"></script>
