--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Employee Directory</title>
+    <title>Employee APP</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <div class="header-actions">
-        <h1>Employee APP</h1>
+        <h1>Welcome to Employee APP</h1>
         <input
           type="text"
           id="searchInput"
